# Todo

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pubspec.yaml  需求.md
android/: gradle.properties
docs/: 01-requirements-spec.md  02-detailed-design.md  03-implementation-plan.md
lib/: bootstrap.dart  main.dart
lib/app/: app.dart
lib/app/shell/: app_shell.dart  app_shell_controller.dart
lib/app/theme/: app_theme.dart
lib/core/database/: app_database.dart  app_database.g.dart  app_database_path.dart  database_records.dart
lib/core/logging/: app_logger.dart
lib/core/routing/: app_router.dart
lib/core/time/: app_time.dart
lib/shared/presentation/: placeholder_panel.dart
src-tauri/: Cargo.toml
src-tauri/src/: error.rs  lib.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/repository/: app_settings_repository.rs  holiday_calendar_repository.rs  mod.rs  sync_meta_repository.rs  tag_repository.rs  task_occurrence_override_repository.rs  task_series_repository.rs  task_series_revision_repository.rs
src-tauri/src/service/: danger_service.rs  holiday_service.rs  mod.rs  platform_service.rs  reminder_service.rs  remote_store.rs  settings_service.rs  sync_service.rs  tag_service.rs  task_service.rs  webdav_store.rs
src/app/: AppShell.vue
src/components/: TaskCard.vue
src/components/__tests__/: TaskCard.test.ts
src/features/reminder/: reminder-api.ts
src/styles/: base.css  tokens.css
src/views/: CalendarView.vue  RecentView.vue  SyncView.vue
test/: widget_test.dart
(+22 files in other folders)
